# supafail

./: Cargo.toml  README.md
src/: cli.rs  main.rs  utils.rs
src/commands/: auth.rs  db.rs
src/commands/db/: setup.rs
