[package]
name = "supafail"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive", "env"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "=1.32.0", features = ["full"] }
